Working on the test suite